--- a/style/style.css
+++ b/style/style.css
@@ -39,3 +39,23 @@ li.list-group-item.videoSelect:hover {
     background-color: #eee; 
     border: 2px solid #aaa;
 }
+
+.lightmode {
+    color: rgb(55,58,50);
+    background-color: white;
+}
+
+.darkmode {
+    color: #eee;
+    background-color: #2c3e50;
+}
+
+.darkmode .list-group-item {
+    color: #eee;
+    background-color: #2c3e50;
+    border: 1px solid #ddd;
+}
+
+.darkmode .vidState { 
+    color: black;
+}
